--- a/android/build.gradle
+++ b/android/build.gradle
@@ -77,5 +77,8 @@ def kotlin_version = getExtOrDefault("kotlinVersion")
 dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation 'androidx.browser:browser:1.5.0'
+  implementation 'androidx.core:core-ktx:1.9.0'
+  implementation 'io.github.droibit:customtabslauncher:3.0.0'
 }
 
